package com.merge.mergedatingapp.auth.dto;

import java.util.UUID;

public record UserResponse(UUID userId, String username) {}
